src/styles/base.scss
@use 'sass:math';
@import 'variables';

$headerHeight: 50px;
$menuWidth: 260px;
$menuWidthSmaller: 220px;
$rightMenuWidth: 275px;
$subHeaderHeight: 40px;
$verticalSpacing: 20px;
$horizontalSpacing: 25px;

// ---- APP CONTAINER ----
.app-container {
  width: 100vw;
  min-height: 100vh;
}

// ---- HEADER ----
header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background: $bg-page;
  z-index: 100;
}
.header__container {
  background-color: white;
  height: $headerHeight;
  margin: $verticalSpacing $horizontalSpacing 0 $horizontalSpacing;
  border-radius: 10px;
  overflow: hidden;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 0 1rem;
  position: relative;
}
.header__user {
  margin: auto 0;
  position: absolute;
  display: flex;
  flex-direction: row;
  align-items: center;
  right: 0.5rem;

  svg {
    fill: $font-color;
  }
}

// ---- LEFT NAVIGATION ----
.navigation {
  position: fixed;
  top: $headerHeight + 2 * $verticalSpacing;
  left: 0;
  padding-bottom: 4px;
  height: calc(100vh - #{$headerHeight + 3 * $verticalSpacing});
  overflow: auto;
}
.navigation__content {
  background-color: white;
  width: $menuWidth;
  margin: 0 $horizontalSpacing $verticalSpacing $horizontalSpacing;
  border-radius: 10px;
}
.navigation__content--is-header {
  height: $subHeaderHeight;
}
.navigation__cgu-link {
  position: absolute;
  bottom: -1.5rem;
  right: $horizontalSpacing;
}

// ---- APP CONTENT ----
main {
  width: 100%;
  min-height: 100vh;
  padding-top: $headerHeight + 2 * $verticalSpacing;
  padding-left: $menuWidth + 2 * $horizontalSpacing;
  padding-right: $horizontalSpacing;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: stretch;

  &.without-nav {
    padding-left: $horizontalSpacing;
  }
}

.app-content {
  width: 100%;
  min-height: 100%;
  flex: 1;
  min-width: 0;
  position: relative;

  &--with-subheader {
    padding-top: $subHeaderHeight + $verticalSpacing;
  }

  &__card {
    background-color: white;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0.5rem 1.2rem;
    overflow: visible;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
  }

  &__sub-header {
    position: absolute;
    top: 0;
    height: $subHeaderHeight;
    width: 100%;
  }
}

.with-sub-header-height {
  height: $subHeaderHeight;
}
.vertical-bottom-margin {
  margin-bottom: $verticalSpacing;
}

// ---- RIGHT NAVIGATION ----
.right-navigation {
  width: $rightMenuWidth;
  min-height: 100%;
  margin-left: $horizontalSpacing;
  padding-bottom: $verticalSpacing;
}

@include for-small-screen {
  .header__container {
    margin: math.div($verticalSpacing, 2) math.div($horizontalSpacing, 2) 0 math.div($horizontalSpacing, 2);
  }

  .navigation {
    top: $headerHeight + $verticalSpacing;
    height: calc(100vh - #{$headerHeight + math.div(3, 2) * $verticalSpacing});
  }
  .navigation__content {
    width: $menuWidthSmaller;
    margin: 0 math.div($horizontalSpacing, 2) math.div($verticalSpacing, 2) math.div($horizontalSpacing, 2);
  }
  .navigation__button {
    font-size: 0.9rem !important;
  }
  .navigation__cgu-link {
    right: math.div($horizontalSpacing, 2);
    font-size: 0.8rem !important;
  }

  main {
    padding-top: $headerHeight + $verticalSpacing;
    padding-left: $menuWidthSmaller + $horizontalSpacing;
    padding-right: math.div($horizontalSpacing, 2);

    &.without-nav {
      padding-left: math.div($horizontalSpacing, 2);
    }
  }

  .app-content--with-subheader {
    padding-top: $subHeaderHeight + math.div($verticalSpacing, 2);
  }

  .right-navigation {
    margin-left: math.div($horizontalSpacing, 2);
    padding-bottom: math.div($verticalSpacing, 2);
  }

  .vertical-bottom-margin {
    margin-bottom: math.div($verticalSpacing, 2);
  }
}

@include for-laptop-screen-up {
  .app-container {
    width: 96vw;
    margin: auto;
  }
  header {
    left: 2vw;
    width: 96vw;
  }
  .navigation {
    left: 2vw;
  }
}
@include for-big-screen-up {
  .app-container {
    width: 80vw;
    margin: auto;
  }
  header {
    left: 10vw;
    width: 80vw;
  }
  .navigation {
    left: 10vw;
  }
}

